cli/src/type_printer/operation_type_printer/tests/snapshots/nitrogql__type_printer__operation_type_printer__tests__basic_type_printing.snap
---
source: src/type_printer/operation_type_printer/tests/mod.rs
expression: printed
---
import type { TypedDocumentNode } from "@graphql-typed-document-node/core";
import type * as Schema from "";

type Query = Schema.__SelectionSet<Schema.Query, {
  me: Schema.__SelectionSet<Schema.User, {
    id: Schema.ID;
    name: Schema.String;
    type: Schema.UserType;
    age: Schema.Int | null;
  }>;
}>;

type Variables = {};

export const Query: TypedDocumentNode<Query, Variables>;

export { Query as default };

